minix/include/minix/syslib.h

void *alloc_contig(size_t len, int flags, phys_bytes *phys);
int free_contig(void *addr, size_t len);
#define AC_ALIGN4K	0x01
#define sys_irqenable(hook_id) \
    sys_irqctl(IRQ_ENABLE, 0, 0, hook_id) 
#define sys_irqsetpolicy(irq_vec, policy, hook_id) \
    sys_irqctl(IRQ_SETPOLICY, irq_vec, policy, hook_id)
#define sys_irqrmpolicy(hook_id) \
    sys_irqctl(IRQ_RMPOLICY, 0, 0, hook_id)
/* MSI-X support — allocate, free, and register handlers for MSI-X IRQs.
 * Unlike legacy IRQs, MSI-X vectors bypass the IOAPIC entirely.
 * The driver programs the MSI-X table entry in its PCI BAR with the
 * returned IRQ number (converted to a vector via IRQ0_VECTOR + irq).
 */
int sys_msix_alloc(int *irq);
#define sys_msix_free(irq) sys_irqctl(IRQ_MSIX_FREE, irq, 0, NULL)
#define sys_msix_setpolicy(irq, policy, hook_id) \
    sys_irqctl(IRQ_MSIX_SETPOLICY, irq, policy, hook_id)
/* Grant-based copy functions. */
int sys_safecopyfrom(endpoint_t source, cp_grant_id_t grant, vir_bytes
	grant_offset, vir_bytes my_address, size_t bytes);
int sys_safecopyto(endpoint_t dest, cp_grant_id_t grant, vir_bytes
	grant_offset, vir_bytes my_address, size_t bytes);
/* pci.c */
void pci_init(void);
int pci_first_dev(int *devindp, u16_t *vidp, u16_t *didp);
int pci_next_dev(int *devindp, u16_t *vidp, u16_t *didp);
void pci_reserve(int devind);
u8_t pci_attr_r8(int devind, int port);
u16_t pci_attr_r16(int devind, int port);
u32_t pci_attr_r32(int devind, int port);
void pci_attr_w16(int devind, int port, u16_t value);
int pci_get_bar(int devind, int port, u32_t *base, u32_t *size, int
	*ioflag);
/* PCI capability list traversal */
int pci_find_cap(int devind, int cap_id, int *cap_ptr);
/* MSI-X capability info */
struct pci_msix_info {
	int msix_table_size;		/* number of MSI-X table entries */
	int msix_table_bir;		/* BAR index containing MSI-X table */
	u32_t msix_table_offset;	/* table offset from BAR (QWORDs) */
	int msix_pba_bir;		/* BAR index containing PBA */
	u32_t msix_pba_offset;		/* PBA offset from BAR (QWORDs) */
};
int pci_msix_parse(int devind, struct pci_msix_info *info);